--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /* Overall styling */
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Helvetica', sans-serif; /* Changed font to Helvetica */
   margin: 0;
   padding: 0;
-  background-color: #f5f5f5; /* Light background color */
+  background: linear-gradient(to right, #9c27b0, #e1bee7); /* Lighter purple gradient background */
 }
 
 /* Header */
 header {
-  background-color: #3f51b5;
+  background-color: #673ab7;
   color: white;
   padding: 20px;
   display: flex;
@@ -19,7 +19,7 @@ header {
 h1 {
   font-size: 2em;
   margin: 0;
-  color: #f0f0f0; /* Lighter heading color */
+  color: #f3e5f5; /* Lighter heading color */
 }
 
 nav {
@@ -37,7 +37,7 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #29378a;/* Darker blue on hover */
+  background-color: #512da8; /* Darker purple on hover */
 }
 
 /* Main content */
@@ -52,14 +52,14 @@ main {
 
 h2 {
   margin-bottom: 10px;
-  color: #3f51b5; /* Accent color for main heading */
+  color: #673ab7; /* Accent color for main heading */
 }
 
 .banner {
   display: flex;
   align-items: center;
   margin-bottom: 15px;
-  background-color: #f0f0f0; /* Light background for banners */
+  background-color: #f3e5f5; /* Light background for banners */
   border-radius: 5px;
   padding: 10px;
 }
@@ -71,10 +71,12 @@ h2 {
   border-radius: 5px; /* Rounded corners for images */
 }
 
-.banner h3
+.banner h3 {
+  /* Add your styles for h3 here */
+}
 
 .flashy-button {
-  background-color: #f04e4e; /* Orange */
+  background-color: #9c27b0; /* Purple */
   color: white;
   padding: 15px 30px;
   border: none;
@@ -86,22 +88,11 @@ h2 {
 }
 
 .flashy-button:hover {
-  background-color: #c03939; /* Darker orange on hover */
+  background-color: #6a1b9a; /* Darker purple on hover */
   transform: scale(1.02); /* Slight scale on hover */
 }
 
-#application-container {
-  width: 80%;
-  margin: auto;
-  padding: 20px;
-  background: rgba(0, 0, 0, 0.7);
-  border-radius: 10px;
+#loan-form {
+  margin: 0 auto;
+  width: 50%; /* Adjust as needed */
 }
-
-.loan-type {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-
