--- a/style.css
+++ b/style.css
@@ -96,3 +96,8 @@ h2 {
   margin: 0 auto;
   width: 50%; /* Adjust as needed */
 }
+form {
+  background-color: #f8f8f8;
+  padding: 20px;
+  border-radius: 5px;
+}
